--- a/run.ipynb
+++ b/run.ipynb
@@ -1,9 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loading data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-04-30 20:06:38 URL:https://raw.githubusercontent.com/sebastian-lapuschkin/lrp_toolbox/master/data/MNIST/train_images.npy [47040080/47040080] -> \"data/train_images.npy\" [1]\n",
+      "2022-04-30 20:06:39 URL:https://raw.githubusercontent.com/sebastian-lapuschkin/lrp_toolbox/master/data/MNIST/train_labels.npy [480080/480080] -> \"data/train_labels.npy\" [1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "wget -nv https://github.com/sebastian-lapuschkin/lrp_toolbox/blob/master/data/MNIST/train_images.npy?raw=true -O data/train_images.npy\n",
+    "\n",
+    "wget -nv https://github.com/sebastian-lapuschkin/lrp_toolbox/blob/master/data/MNIST/train_labels.npy?raw=true -O data/train_labels.npy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -20,7 +51,7 @@
     "import numpy as np\n",
     "import mlp_utils\n",
     "from mlp_utils import Dense, ReLU, LogSoftMax, NNetwork\n",
-    "\n",
+    "from tqdm import tqdm\n",
     "from importlib import reload\n",
     "\n",
     "reload(mlp_utils)"
@@ -28,7 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.load('data/train_images.npy').astype(float) / 255.\n",
+    "Y = np.load('data/train_labels.npy').astype(np.int32)\n",
+    "nclasses = len(np.unique(Y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,16 +87,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06640625"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Generating random data\n",
-    "np.random.seed(2)\n",
-    "dataset_size = 10**5\n",
-    "nclasses = 4\n",
-    "X = np.random.randn(dataset_size, 7*7)\n",
-    "Y = np.random.randint(low=0, high=nclasses-1, size=dataset_size)"
+    "LR = 0.1\n",
+    "input_size = np.prod(X.shape[1:]) ## skipping batch dim\n",
+    "model = NNetwork(layers = [\n",
+    "    Dense(input_size, 2**7, LR),\n",
+    "    ReLU(),\n",
+    "    Dense(2**7, 2**5, LR),\n",
+    "    ReLU(),\n",
+    "    Dense(2**5,nclasses, LR),\n",
+    "],\n",
+    "    loss = LogSoftMax()\n",
+    ")\n",
+    "BATCHSIZE = 32\n",
+    "rand_batch_indices = np.random.choice(len(X), BATCHSIZE)\n",
+    "(model.predict(X[rand_batch_indices]) == Y[rand_batch_indices]).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                                                             | 0/3 [00:00<?, ?it/s]/home/whoisjiji/Desktop/crafted_neural_networks/mlp_utils.py:62: RuntimeWarning: overflow encountered in exp\n",
+      "  log_sum_logits = np.log(np.sum(np.exp(logits), axis=-1))  # summation over logits axis\n",
+      "/home/whoisjiji/Desktop/crafted_neural_networks/mlp_utils.py:69: RuntimeWarning: overflow encountered in exp\n",
+      "  softmax = np.exp(logits) / np.sum(np.exp(logits),axis=-1, keepdims=True) # summation over logits axis\n",
+      "/home/whoisjiji/Desktop/crafted_neural_networks/mlp_utils.py:69: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  softmax = np.exp(logits) / np.sum(np.exp(logits),axis=-1, keepdims=True) # summation over logits axis\n",
+      " 33%|████████████████████████████▎                                                        | 1/3 [00:06<00:12,  6.39s/it]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_4515/3981944295.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mx_batch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_batch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0miterate_minibatches\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBATCHSIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0mlayer_inputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_batch\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# FORWARD PASS\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;31m# ENDING FORWARD (COMPUTING LOSS) + STARTING BACKWARD (COMPUTING LOGITS GRAD)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/crafted_neural_networks/mlp_utils.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m     90\u001b[0m         \u001b[0mlayer_inputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mlayer\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 92\u001b[0;31m             \u001b[0minput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlayer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     93\u001b[0m             \u001b[0mlayer_inputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/crafted_neural_networks/mlp_utils.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m         \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m@\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbiases\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "from IPython.display import clear_output\n",
+    "\n",
+    "EPOCHS = 3\n",
+    "\n",
+    "for epoch in tqdm(range(EPOCHS)):\n",
+    "    \n",
+    "    for x_batch, y_batch in iterate_minibatches(X, Y, BATCHSIZE):\n",
+    "        layer_inputs, logits = model.forward(x_batch) # FORWARD PASS\n",
+    "        \n",
+    "        # ENDING FORWARD (COMPUTING LOSS) + STARTING BACKWARD (COMPUTING LOGITS GRAD)\n",
+    "        batch_loss, grad_logits = model.compute_loss(logits, y_batch)\n",
+    "        \n",
+    "        model.backward(layer_inputs, grad_logits)  # BACKWARD (UPDATING weights)"
    ]
   },
   {
@@ -63,160 +174,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "LR = 0.01\n",
-    "input_size = np.prod(X.shape[1:]) ## skipping batch dim\n",
-    "model = NNetwork(layers = [\n",
-    "    Dense(input_size, 2**5, LR),\n",
-    "    ReLU(),\n",
-    "    Dense(2**5, 2**4, LR),\n",
-    "    ReLU(),\n",
-    "    Dense(2**4,nclasses, LR),\n",
-    "],\n",
-    "    loss = LogSoftMax()\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.21340989,  0.39631291, -0.86856653, ..., -1.29404792,\n",
-       "        -1.12570562,  1.29092966],\n",
-       "       [-0.23899517, -0.19442405,  2.20356364, ...,  1.4954862 ,\n",
-       "        -0.29619121, -0.60087935],\n",
-       "       [ 1.84882381,  0.83582694,  0.60435625, ...,  0.09464683,\n",
-       "         0.25997608, -1.61041033],\n",
-       "       ...,\n",
-       "       [ 1.75351663,  1.2794048 , -0.1313487 , ...,  1.08061383,\n",
-       "         0.89395252, -0.98280237],\n",
-       "       [-1.54338587,  0.56257521, -0.08125299, ..., -0.49492859,\n",
-       "        -0.83264532, -1.22570946],\n",
-       "       [ 0.75284819,  1.86935144, -1.14968957, ...,  0.10486069,\n",
-       "         0.0470952 ,  1.07654599]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.layers[0].weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import clear_output\n",
-    "train_log = []\n",
-    "val_log = []\n",
-    "\n",
-    "EPOCHS = 1\n",
-    "BATCHSIZE = 64\n",
-    "\n",
-    "for epoch in range(EPOCHS):\n",
-    "    \n",
-    "    for x_batch, y_batch in iterate_minibatches(X, Y, BATCHSIZE):\n",
-    "        layer_inputs, logits = model.forward(x_batch) # FORWARD PASS\n",
-    "        \n",
-    "        \n",
-    "        # ENDING FORWARD (COMPUTING LOSS) + STARTING BACKWARD (COMPUTING LOGITS GRAD)\n",
-    "        batch_loss, grad_logits = model.compute_loss(logits, y_batch)\n",
-    "        \n",
-    "        break\n",
-    "        \n",
-    "  \n",
-    "        model.backward(layer_inputs, grad_logits)  # BACKWARD (UPDATING weights)\n",
-    "        \n",
-    "#         break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "262.60057351515405"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "logits.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # grad_output = grad_logits\n",
-    "# input, layer = list(reversed(list(zip(layer_inputs, model.layers))))[4]\n",
-    "# grad_output = layer.backward(input, grad_output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.5892453699373856"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "102.09045600183748"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.loss.forward(logits, y_batch)"
-   ]
   }
  ],
  "metadata": {
