--- a/run.ipynb
+++ b/run.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -44,7 +44,7 @@
        "<module 'mlp_utils' from '/home/whoisjiji/Desktop/crafted_neural_networks/mlp_utils.py'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
    "source": [
     "import numpy as np\n",
     "import mlp_utils\n",
-    "from mlp_utils import Dense, ReLU, LogSoftMax, NNetwork\n",
+    "from mlp_utils import Dense, ReLU, LogitsSoftMaxCE, NNetwork\n",
     "from tqdm import tqdm\n",
     "from importlib import reload\n",
     "\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,14 +95,11 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.1875"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train accuracy before learning :: 0.0625\n"
+     ]
     }
    ],
    "source": [
@@ -117,30 +114,30 @@
     "    ReLU(),\n",
     "    Dense(2**5,nclasses, LR),\n",
     "],\n",
-    "    loss = LogSoftMax()\n",
+    "    loss = LogitsSoftMaxCE()\n",
     ")\n",
     "BATCHSIZE = 32\n",
     "rand_batch_indices = np.random.choice(len(X), BATCHSIZE)\n",
-    "(model.predict(X[rand_batch_indices]) == Y[rand_batch_indices]).mean()"
+    "print(f\"Train accuracy before learning :: {(model.predict(X[rand_batch_indices]) == Y[rand_batch_indices]).mean()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 33%|████████████████████████████▎                                                        | 1/3 [00:06<00:12,  6.12s/it]"
+      " 33%|████████████████████████████▎                                                        | 1/3 [00:06<00:13,  6.81s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train accuracy after 1 epoch :: 0.90625\n"
+      "Train accuracy after 1 epoch :: 0.96875\n"
      ]
     },
     {
@@ -148,28 +145,28 @@
      "output_type": "stream",
      "text": [
       "\r",
-      " 67%|████████████████████████████████████████████████████████▋                            | 2/3 [00:12<00:06,  6.11s/it]"
+      " 67%|████████████████████████████████████████████████████████▋                            | 2/3 [00:12<00:06,  6.35s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train accuracy after 2 epoch :: 0.96875\n"
+      "Train accuracy after 2 epoch :: 1.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████| 3/3 [00:18<00:00,  6.14s/it]"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████| 3/3 [00:20<00:00,  6.73s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train accuracy after 3 epoch :: 0.90625\n"
+      "Train accuracy after 3 epoch :: 1.0\n"
      ]
     },
     {
